# blgfiles

./: CMakeLists.txt  README.md  blogscript.cpp  shell.nix
